# short_quiz_test

./: .gitignore  child_play.py  pyproject.toml  requirements.txt  vehicle_query.ipynb
