[tool.poetry]
name = "sunartha_bootcamp"
version = "0.1.0"
description = ""
authors = ["Yogic <yogicrhama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
ipykernel = "^6.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
